fixed issue with intro color on mobile

--- a/dev/sass/gallery.scss
+++ b/dev/sass/gallery.scss
@@ -137,4 +137,5 @@
 
 .content-section {
   visibility: hidden;
+  padding-top: 150px;
 }
